# urdf-debugger

./: .gitignore  README.md  main.py  prompt.md  pyproject.toml
docs/: prompt0.md  prompt_history_01.md  prompt_history_02.md  urdf_considerations.md
physcheck/: __init__.py
physcheck/analysis/: __init__.py  inertia.py
physcheck/scripts/: __init__.py  fix_inertials.py  show_kinematic_tree.py
physcheck/urdf/: __init__.py  loader.py  tree.py
physcheck/viewers/: __init__.py
physcheck/viewers/tk/: __init__.py  tree_viewer.py
physcheck/visualization/: __init__.py  scene.py  tree.py
robots/mini_cheetah/urdf/: mini_cheetah_simple.urdf  mini_cheetah_simple_fixed.urdf  mini_cheetah_simple_fixed2.urdf
scripts/: show_kinematic_tree.py
tests/: conftest.py  test_cli_selection.py  test_inertia_checks.py  test_loader.py  test_tree_layout.py  test_visualization_consistency.py
