[project]
name = "physcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.1",
    "pytest>=8.0",
    "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["physcheck*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
